# ClawTTY

./: .gitignore  GUI_REWRITE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  clawtty.py  index.html  install-fedora.sh  install.ps1  install.sh  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
python/: README.md  sidecar.py
python/backend/: __init__.py  agent_plugins.py  app.py  audit.py  cli.py  config.py  credentials.py  platform_info.py  settings.py  ssh.py  status_cache.py  theme.py  ws_client.py
python/backend/ui/: __init__.py  _base.py  macro_bar.py  macro_panel.py  profile_form.py  session_area.py  session_tabs.py  settings_dialog.py  sidebar.py  status_dashboard.py  ws_session_panel.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ChatPane.tsx  CommandPalette.tsx  EmptyState.tsx  ProfileDrawer.tsx  Sidebar.tsx  TabBar.tsx  TerminalPane.tsx
src/hooks/: useProfiles.ts
src/lib/: sidecar.ts  types.ts
src/pages/: SessionsPage.tsx  SettingsPage.tsx  StatusDashboardPage.tsx
src/styles/: index.css
